# chess

./: .gitignore  CMakeLists.txt  TODO
src/: CMakeLists.txt  bitboards.hh  color.hh  listener.hh  main.cc  move.cc  move.hh  movegen.cc  pgn-move.cc  pgn-move.hh  pgn-parser.cc  piece-type.hh  position.hh  types.hh
src/ai/: CMakeLists.txt  eval.cc  eval.hh  minmax.cc  minmax.hh  uci.hh
src/board/: CMakeLists.txt  bitboard.cc  bitboard.hh  board-adapter.cc  board-adapter.hh  board.cc  board.hh  boardmoves.cc  chessboard-interface.hh  hash_keys.cc  hash_keys.hh  move.cc  move.hh  pgn-move.cc  pgn-move.hh  piece-type.cc  piece-type.hh  position.cc  position.hh  position.hxx
src/listener/: CMakeLists.txt  basic_logger.cc  basic_logger.hh  listener.hh
src/move/: CMakeLists.txt  move.cc  move.hh
src/pgn_parser/: CMakeLists.txt  pgn-exception.cc  pgn-exception.hh  pgn-parser.cc  pgn-parser.hh  pgn.cc  pgn.hh
src/utils/: CMakeLists.txt  misc.cc  misc.hh  options.cc  options.hh  perft.cc  perft.hh
tests/: CMakeLists.txt  adapter_Test.cc  gen_pawn_moves_test.cc  is_attacked_test.cc  move_Test.cc  movegen_Test.cc  movegen_castlings_Test.cc  movegen_king_Test.cc  movegen_knight_Test.cc  movegen_pawn_Test.cc  movegen_slidin_Test.cc  tmp.perft  uci_to_move_test.cc  undo_move_test.cc
